# blingbling

./: CREDITS  ChangeLog  INSTALL  Make.include.in  Makefile  NOTES  README.md  TODO  config.h.in  configure  configure.ac
data/: Makefile
icons/CVS/: Entries  Repository  Root
puyo-js/: game.js  index.html
puyo-js/assets/: blingbling.conf
puyo-js/icons/: README
puyo-js/src/: game.js  main.js
src/: .sconsign  Makefile  Makefile.bak  SConstruct  app.cc  app.h  block.cc  block.h  creditscreen.cc  creditscreen.h  field.cc  field.h  gamesingle.cc  gamesingle.h  helpscreen.cc  helpscreen.h  main.cc  main.h  menuscreen.cc  menuscreen.h  newgamescreen.cc  newgamescreen.h  optionscreen.cc  optionscreen.h  parser.cc  parser.h  prefs.cc  prefs.h  resource.rc  scorelist.cc  scorelist.h  scorescreen.cc  scorescreen.h  soundset.cc  soundset.h  spriteset.cc  spriteset.h  ticker.cc  ticker.h  tile.cc  (+9 more)
web/: index.html  package-lock.json  package.json  publish.bat  vite.config.js
web/assets/: .blingscores  bling.theme
web/assets/bling/: Another.txt  HUSKYSTA.txt
web/src/: game.js  gameObject.js
win32/: Makefile  blingbling.nsi  blinglibs.nsi
